# aml_open_framework

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  dashboard_tenants.example.yaml  docker-compose.yml  pyproject.toml
.githooks/: pre-push
.github/workflows/: ci.yml  codex-pr-review-gate.yml  deploy-azure-landing-zone.yml  perf-nightly.yml  sync-demo.yml
.streamlit/: config.toml
data/input/: .gitkeep_customer_example.csv  .gitkeep_txn_example.csv  README.md  customer.csv  txn.csv
deploy/helm/: Chart.yaml  README.md  values-azure.example.yaml  values.yaml
deploy/helm/templates/: api-deployment.yaml  dashboard-deployment.yaml  postgres.yaml  secrets.yaml
deploy/terraform/: README.md  main.tf  outputs.tf  providers.tf  variables.tf
docs/: api-reference.md  architecture.md  audit-evidence.md  dashboard-tour.md  deployment.md  getting-started.md  jurisdictions.md  metrics-framework.md  personas.md  progress.md  regulator-mapping.md  spec-reference.md
docs/case-studies/: td-2024.md
docs/migration/: chart-library-audit.md
docs/perf/: baseline.md
docs/pitch/deck/: index.html
docs/pitch/deck/assets/: tokens.css
docs/pitch/deck/slides/: 02-hero-product.html  02-problem.html  03-thesis.html  04-architecture.html  05-validation.html  06-rule-types.html  07-personas.html  08-today-landing.html  09-rag-semantics.html  10-detection-arc.html  11-audit-terminal.html  12-effectiveness-funnel.html  13-framework-alignment.html  14-network-explorer.html  15-iso-sanctions.html  16-regwatch-audit-pack.html  17-proof.html  18-cta.html  18-real-product.html  19-cta.html  easier-day-to-day.html  plain-english.html  who-benefits.html
docs/pitch/landing/: index.html
docs/research/: 2026-04-aml-process-pain.md  2026-04-competitive-positioning.md  2026-04-fintech-aml-reality.md  2026-04-regulator-pulse.md  2026-05-aml-data-problem.md  2026-05-regulator-pulse.md
examples/canadian_bank/: aml.yaml
examples/canadian_schedule_i_bank/: aml.yaml
examples/community_bank/: aml.yaml
examples/crypto_vasp/: README.md  aml.yaml
examples/cyber_enabled_fraud/: README.md  aml.yaml
examples/eu_bank/: aml.yaml
examples/trade_based_ml/: aml.yaml
examples/uk_app_fraud/: aml.yaml
examples/uk_bank/: aml.yaml
examples/us_rtp_fednow/: aml.yaml
schema/: aml-spec.schema.json
scripts/: capture_lineage_screenshots.py  capture_pilot_screenshots.py  sync_demo_site.sh
src/aml_framework/: __init__.py  add_rule_wizard.py  auditor.py  byod.py  cli.py  diff.py  export.py  init_wizard.py  paths.py  propose_change.py  release.py  secrets.py  today_checklist.py  typology_library.py
src/aml_framework/api/: __init__.py  auth.py  db.py  finos_compliance.py  main.py  openapi-compliance.yaml
src/aml_framework/assistant/: __init__.py  azure_openai.py  base.py  factory.py  models.py  ollama.py  openai.py  template.py
src/aml_framework/attestations/: __init__.py
src/aml_framework/cases/: __init__.py  aggregator.py  filing.py  linkage.py  sla.py  str_bundle.py  triage.py
src/aml_framework/compliance/: __init__.py  boi.py  regwatch.py  sandbox.py
src/aml_framework/dashboard/: __init__.py  app.py  audience.py  chart_theme.py  charts.py  components.py  data_grid.py  data_layer.py  frameworks.py  glossary.py  maturity.py  query_params.py  queue_state.py  roadmap.py  run_history.py  scheme.py  section_explainer.py  state.py  tenants.py  today.py  tour.py  tuning_state.py
src/aml_framework/dashboard/data/: regulator_pulse.py
src/aml_framework/dashboard/pages/: 0_Today.py  0_Welcome.py  10_Network_Explorer.py  11_Live_Monitor.py  12_Sanctions_Screening.py  13_Model_Performance.py  (+28 more)
src/aml_framework/data/: __init__.py  fixtures.py  sources.py  synthetic.py
src/aml_framework/engine/: __init__.py  audit.py  backtest.py  constants.py  entity_resolution.py  explain.py  freshness.py  runner.py  tuning.py
src/aml_framework/generators/: __init__.py  amla_str.py  audit_pack.py  board_pdf.py  dag.py  dbt.py  docs.py  effectiveness.py  goaml_xml.py  mrm.py  narrative.py  sql.py
src/aml_framework/integrations/: __init__.py  digest.py  jira.py  notifications.py  purview.py  sentinel.py  siem.py  travel_rule_adapter.py
src/aml_framework/metrics/: __init__.py  engine.py  outcomes.py  reports.py
src/aml_framework/models/: __init__.py  scoring.py  travel_rule.py  xgboost_scorer.py
src/aml_framework/narratives/: __init__.py  base.py  drafter.py  models.py  ollama.py  openai.py  template.py
src/aml_framework/observability/: __init__.py  otel.py
src/aml_framework/pkyc/: __init__.py  detectors.py  recalculator.py  scan.py  triggers.py
src/aml_framework/sanctions/: __init__.py  base.py  cache.py  complyadvantage.py  eu.py  ofac.py  sync.py
src/aml_framework/spec/: __init__.py  loader.py  models.py
src/aml_framework/vasp/: __init__.py  attribution.py  sources.py
tests/: test_add_rule_wizard.py  test_amla_str.py  test_api.py  test_api_finos_compliance.py  test_assistant_audit_log.py  test_assistant_panel_wired_into_page_header.py  test_assistant_template_backend.py  test_attestations.py  test_audit_decision_metadata.py  test_audit_pack.py  test_audit_pii_masking.py  test_auditor.py  test_board_pdf.py  test_byod.py  test_canadian_example.py  test_cases_aggregator.py  test_cases_filing.py  test_cases_linkage.py  test_cases_sla.py  test_cases_str_bundle.py  test_cases_triage.py  test_chart_helpers.py  test_cli_demo.py  test_cli_lineage.py  test_cli_queue_rank.py  test_compliance_boi.py  test_compliance_regwatch.py  test_compliance_sandbox.py  test_contract_validation.py  test_coverage_99.py  test_coverage_99_edges.py  test_coverage_final_push.py  test_coverage_gaps.py  test_dashboard_audit_pack_button.py  test_dashboard_audit_terminal.py  test_dashboard_chart_polish.py  test_dashboard_citation_link.py  test_dashboard_components_helpers.py  test_dashboard_dark_theme.py  test_dashboard_data_integration_lineage.py  (+101 more)
tests/perf/: __init__.py  expected_baseline.json  run_engine_baseline.py  test_engine_baseline.py
(+16 files in other folders)
