[build-system]
requires = ["setuptools>=68", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "aml-open-framework"
dynamic = ["version"]
description = "Spec-driven, audit-ready AML automation for regulated financial institutions."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "AML Open Framework contributors" }]
keywords = ["aml", "compliance", "fintech", "regtech", "spec-driven"]
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "jsonschema>=4.21",
    "duckdb>=0.10",
    "jinja2>=3.1",
    "typer>=0.16",
    "rich>=13.7",
    "faker>=24.0",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    # `make pre-push` mirrors CI; ci-security needs these to run
    # locally. CI installs them ad-hoc but pinning them in [dev]
    # lets `pip install -e ".[dev]"` give a contributor a working
    # pre-push gate with no extra steps.
    "bandit>=1.7",
    "pip-audit>=2.7",
]
ai = [
    # PR-K MVP. Both optional — the assistant module's `template`
    # backend works with zero deps and is the default. Operators
    # opt into ollama / openai via `AML_AI_BACKEND`.
    "openai>=1.0",
    "ollama>=0.1",
]
dashboard = [
    "streamlit>=1.35",
    "streamlit-agraph>=0.0.45",
    "streamlit-echarts>=0.6.0",
    "streamlit-aggrid>=1.2.1",
    "pandas>=2.2",
]
api = [
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "pyjwt>=2.8",
    "python-jose[cryptography]>=3.3",
    "python-multipart>=0.0.9",
    "psycopg2-binary>=2.9",
    "httpx>=0.27",
]
ml = [
    "xgboost>=2.0",
    "scikit-learn>=1.4",
]
azure = [
    # PR-AZ-1: Blob/ADLS via DuckDB azure extension; Synapse + Azure
    # SQL via pyodbc. azure-identity for DefaultAzureCredential when
    # workload identity is the auth mode.
    "azure-identity>=1.14",
    "azure-storage-blob>=12.19",
    "pyodbc>=5.0",
    # PR-AZ-2: Key Vault secrets adapter (lazy-imported by
    # aml_framework.secrets when AZURE_KEY_VAULT_NAME is set).
    "azure-keyvault-secrets>=4.7",
    # PR-AZ-7: OpenTelemetry → Azure Monitor (App Insights). Wires
    # FastAPI request traces + Streamlit page renders into the
    # landing zone's Application Insights instance. Lazy-imported by
    # aml_framework.observability.otel when
    # APPLICATIONINSIGHTS_CONNECTION_STRING is set.
    "azure-monitor-opentelemetry>=1.5",
    # PR-AZ-10: Cosmos DB serverless persistence. Used when COSMOS_ENDPOINT
    # is set (alternative to DATABASE_URL on Sponsorship subs that lock
    # Postgres Flexible Server). Lazy-imported by aml_framework.api.db.
    "azure-cosmos>=4.7",
]

[project.scripts]
aml = "aml_framework.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aml_framework = ["templates/*.sql.j2", "templates/*.md.j2"]

[tool.setuptools_scm]
# Derive version from git tags. The current commit's version becomes:
#   - exactly `<tag>` when HEAD is on a tag (e.g. v0.2.0 → 0.2.0).
#   - `<next-patch>.devN+gHASH` for commits past the latest tag.
# `version_file` writes the resolved version into the wheel at build
# time so importlib.metadata.version("aml-open-framework") returns it
# at runtime — no need for .git/ in the deployed image.
version_file = "src/aml_framework/_version.py"
# Fallback when neither git history nor the installed wheel knows the
# version (rare — e.g. a partially-stripped sdist).
fallback_version = "0.1.0+unknown"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
source = ["aml_framework"]
omit = [
    "*/dashboard/pages/*",
    "*/dashboard/app.py",
    "*/dashboard/state.py",
    "*/dashboard/components.py",
    "*/dashboard/audience.py",
    "*/dashboard/data_layer.py",
    "*/dashboard/charts.py",
    "*/dashboard/data/regulator_pulse.py",
    "*/dashboard/run_history.py",
    "*/api/main.py",
    "*/auditor.py",
    "*/byod.py",
    "*/cases/str_bundle.py",
    "*/compliance/regwatch.py",
    "*/cli.py",
    "*/engine/audit.py",
    "*/engine/freshness.py",
    "*/engine/runner.py",
    "*/engine/tuning.py",
    "*/export.py",
    "*/generators/audit_pack.py",
    "*/generators/board_pdf.py",
    "*/generators/goaml_xml.py",
    "*/models/xgboost_scorer.py",
    "*/narratives/openai.py",
    "*/pkyc/detectors.py",
    "*/pkyc/recalculator.py",
    "*/propose_change.py",
    "*/sanctions/base.py",
    "*/sanctions/eu.py",
    "*/sanctions/ofac.py",
    "*/sanctions/sync.py",
    "*/today_checklist.py",
    "*/vasp/sources.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__",
    "raise NotImplementedError",
]
fail_under = 99

[tool.ruff]
line-length = 100
target-version = "py310"
# Generated by setuptools-scm at install time. Never hand-edit; ruff
# would only nag about formatting we can't influence.
extend-exclude = ["src/aml_framework/_version.py"]
